--- a/decommission/decommissioned-sites.hbs
+++ b/decommission/decommissioned-sites.hbs
@@ -14,7 +14,7 @@ server {
 {{/pages}}
 
     # catch all redirect to the home page
-    location / {
+    location {{catchAllUri}} {
         rewrite ^ {{url}}?via=$scheme://$host$uri break;
         return 302;
     }
@@ -35,7 +35,7 @@ server {
 {{/pages}}
 
     # catch all redirect to the home page
-    location / {
+    location {{catchAllUri}} {
         rewrite ^ {{{url}}}?via=$scheme://$host$uri break;
         return 302;
     }
